@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclIntDecls.h,v 1.50.2.54 2010/11/29 13:32:22 dgp Exp $
+ * RCS: @(#) $Id: tclIntDecls.h,v 1.50.2.55 2010/11/30 21:29:34 dgp Exp $
  */
 
 #ifndef _TCLINTDECLS
@@ -109,7 +109,8 @@ EXTERN int		TclFindElement(Tcl_Interp *interp,
 				int *bracePtr);
 /* 23 */
 EXTERN Proc *		TclFindProc(Interp *iPtr, const char *procName);
-/* Slot 24 is reserved */
+/* 24 */
+EXTERN int		TclFormatInt(char *buffer, long n);
 /* 25 */
 EXTERN void		TclFreePackageInfo(Interp *iPtr);
 /* Slot 26 is reserved */
@@ -628,7 +629,7 @@ typedef struct TclIntStubs {
     void (*reserved21)(void);
     int (*tclFindElement) (Tcl_Interp *interp, const char *listStr, int listLength, const char **elementPtr, const char **nextPtr, int *sizePtr, int *bracePtr); /* 22 */
     Proc * (*tclFindProc) (Interp *iPtr, const char *procName); /* 23 */
-    void (*reserved24)(void);
+    int (*tclFormatInt) (char *buffer, long n); /* 24 */
     void (*tclFreePackageInfo) (Interp *iPtr); /* 25 */
     void (*reserved26)(void);
     void (*reserved27)(void);
@@ -907,7 +908,8 @@ extern const TclIntStubs *tclIntStubsPtr;
 	(tclIntStubsPtr->tclFindElement) /* 22 */
 #define TclFindProc \
 	(tclIntStubsPtr->tclFindProc) /* 23 */
-/* Slot 24 is reserved */
+#define TclFormatInt \
+	(tclIntStubsPtr->tclFormatInt) /* 24 */
 #define TclFreePackageInfo \
 	(tclIntStubsPtr->tclFreePackageInfo) /* 25 */
 /* Slot 26 is reserved */
